# grip-otty

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/otty-pad-studio/: README.md  index.html  package-lock.json  package.json
apps/otty-pad-studio/src/: main.ts  styles.css
apps/otty-pad-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/otty-pad-studio/src-tauri/src/: lib.rs  main.rs
apps/otty-pad-studio/src/lib/: prompt.test.ts  prompt.ts
docs/: OTTY-1.2.2-NOTES.md
examples/gated-hooks/: README.md  gate_hooks.py  otty-state-hook.sh
src/otty_pad/: __init__.py  __main__.py  pad.py  transport.py
tests/: test_pad.py  test_transport.py
