[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grip-otty"
version = "0.1.0"
description = "Unofficial Otty terminal toolkit: ship prompts from any text editor into any agent pane (Claude Code, Codex, OpenCode). Stdlib-only."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CodeTonight SA" }]
keywords = ["otty", "terminal", "ai-agents", "claude-code", "codex", "opencode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
]

[project.scripts]
otty-pad = "otty_pad.pad:main"

[project.urls]
Homepage = "https://github.com/CodeTonight-SA/grip-otty"
Issues = "https://github.com/CodeTonight-SA/grip-otty/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["otty_pad"]
