[package]
name = "otty-pad-studio"
version = "0.1.0"
description = "Tauri Markdown prompt cockpit for grip-otty"
authors = ["CodeTonight SA"]
license = "MIT"
repository = "https://github.com/CodeTonight-SA/grip-otty"
edition = "2021"

[lib]
name = "otty_pad_studio_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
